CTRL for InvertSnapping (feels like) Is HardCoded Somewhere #63641

Closed
opened 2019-04-16 02:14:22 +02:00 by 0rAngE · 11 comments

System Information
Operating system: Windows-7-6.1.7601-SP1 64 Bits
Graphics card: GeForce GTX 1060 6GB/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 417.35

Blender Version
Broken: version: 2.80.0-git.860a9f979d60-windows64
Worked: I don't think I had this working (like 2.7x) ever

Short description of error
This is going to be hard to assure you guys that this is really a thing.

Basically SNAPPING (to be precise Invert Snapping) is hardcoded somewhere with CTRL.

I use a customized blender version, where I have CTRL+TWEAK LMB set for "Move" (transform.translate).
The behavior I get is: as soon as I enter "Move Mode" my snapping is INVERTED (this is totally undesired).
I went and Disabled/Unchecked all of the SNAPPING entries from the KEYMAP, and as expected all snapping is off now. But I still get the same thing when I invoke "Move Mode" with CTRL+TWEAK LMB, the snapping gets inverted!

Checked with FactoryDefault and I get the same thing.

What I will do is give you 2 setups you can test this with pretty fast.

  • First one is going to have the "Move" (transform.translate) bound to CTRL+TWEAK LMB. Everything else is going to be FactoryDefault
  • Second one is going to be like the first one, but I will also disable all SNAPPING bound to CTRL. So you can see that snappings are disabled, yet I still get "InvertSnapping" when invoking "MoveMode' using CTRL+TWEAK LMB.

Exact steps for others to reproduce the error

  • Install the 1st BlenderPrefs and with the Default Cube selected, press CTRL + TWEAK + LMB. You will see that Snapping will get Enabled, even though it was Disabled prior to that. You can then toggle it by Releasing CTRL (but this is a major inconvenience to get around the initial bug). And by pressing CTRL again you can toggle it again, You are in MoveMode this whole time!

  • Now install the 2nd BlenderPrefs. And again with the Default Cube selected, press CTRL + TWEAK + LMB. As before, you will see that Snapping will get Enabled, even though it was Disabled prior to that. But this time you won't be able to toggle it, because all CTRL hotkeys for SNAPPING have been unchecked in the Keymap. This is to show that the initial SnappingToggle that happend is not in the Keymap entries (at least I can't find it). And while were at it, maybe the reason I can not find it is that the Modals don't show in keymap Search filters! Maybe that's something that could be addressed as well?

This is where you can grab the 2 BlendPrefs settings to test this out:
http://edge-loop.com/images/blender/bugtracker/Blender_280_CTRL_Snapping_Bug_TestingPreferences.zip

That is basically just the 2.80 folder from "C:\Users...........\AppData\Roaming\Blender Foundation\Blender" that you need to place there in order to test the bug.

Thanks again to anyone looking into this!

**System Information** Operating system: Windows-7-6.1.7601-SP1 64 Bits Graphics card: GeForce GTX 1060 6GB/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 417.35 **Blender Version** Broken: version: 2.80.0-git.860a9f979d60-windows64 Worked: I don't think I had this working (like 2.7x) ever **Short description of error** This is going to be hard to assure you guys that this is really a thing. Basically SNAPPING (to be precise Invert Snapping) is hardcoded somewhere with CTRL. I use a customized blender version, where I have CTRL+TWEAK LMB set for "Move" (transform.translate). The behavior I get is: as soon as I enter "Move Mode" my snapping is INVERTED (this is totally undesired). I went and Disabled/Unchecked all of the SNAPPING entries from the KEYMAP, and as expected all snapping is off now. But I still get the same thing when I invoke "Move Mode" with CTRL+TWEAK LMB, the snapping gets inverted! Checked with FactoryDefault and I get the same thing. What I will do is give you 2 setups you can test this with pretty fast. - First one is going to have the "Move" (transform.translate) bound to CTRL+TWEAK LMB. Everything else is going to be FactoryDefault - Second one is going to be like the first one, but I will also disable all SNAPPING bound to CTRL. So you can see that snappings are disabled, yet I still get "InvertSnapping" when invoking "MoveMode' using CTRL+TWEAK LMB. **Exact steps for others to reproduce the error** - Install the 1st BlenderPrefs and with the Default Cube selected, press CTRL + TWEAK + LMB. You will see that Snapping will get Enabled, even though it was Disabled prior to that. You can then toggle it by Releasing CTRL (but this is a major inconvenience to get around the initial bug). And by pressing CTRL again you can toggle it again, You are in MoveMode this whole time! - Now install the 2nd BlenderPrefs. And again with the Default Cube selected, press CTRL + TWEAK + LMB. As before, you will see that Snapping will get Enabled, even though it was Disabled prior to that. But this time you won't be able to toggle it, because all CTRL hotkeys for SNAPPING have been unchecked in the Keymap. This is to show that the initial SnappingToggle that happend is not in the Keymap entries (at least I can't find it). And while were at it, maybe the reason I can not find it is that the Modals don't show in keymap Search filters! Maybe that's something that could be addressed as well? This is where you can grab the 2 BlendPrefs settings to test this out: http://edge-loop.com/images/blender/bugtracker/Blender_280_CTRL_Snapping_Bug_TestingPreferences.zip That is basically just the 2.80 folder from "C:\Users\...........\AppData\Roaming\Blender Foundation\Blender" that you need to place there in order to test the bug. Thanks again to anyone looking into this!
Author

Added subscriber: @0rAngE

Added subscriber: @0rAngE

This issue was referenced by 0ca9ce21ab

This issue was referenced by 0ca9ce21abf03d8fd92d5c5f499af59adfa21058

Added subscribers: @WilliamReynish, @ZedDB

Added subscribers: @WilliamReynish, @ZedDB
William Reynish was assigned by Sebastian Parborg 2019-04-16 12:33:05 +02:00

Right, seems to be hard coded in blender/editors/transform/transform.c:2412.

@WilliamReynish I'm unsure if we can easily move this out to the keymap. Any input etc?

Right, seems to be hard coded in `blender/editors/transform/transform.c:2412`. @WilliamReynish I'm unsure if we can easily move this out to the keymap. Any input etc?

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Added subscriber: @brecht

Added subscriber: @brecht

Changed status from 'Resolved' to: 'Open'

Changed status from 'Resolved' to: 'Open'

I didn't actually test this, just noticed the bug in not ignoring disabled keymap items and fixed that. There may be another issue here, can someone test?

I didn't actually test this, just noticed the bug in not ignoring disabled keymap items and fixed that. There may be another issue here, can someone test?
Author

Brecht,

I'm kind of deep into this, that's why I was able to catch this. Once I get the buildbot with the fix, I'll run it through tests with my setup. I can report back here, if it's OK with you.

Thanks again guys for looking into this!!! This was a major roadblock with a custom setup that is similar to something I use.
Appreciate it!!!

Brecht, I'm kind of deep into this, that's why I was able to catch this. Once I get the buildbot with the fix, I'll run it through tests with my setup. I can report back here, if it's OK with you. Thanks again guys for looking into this!!! This was a major roadblock with a custom setup that is similar to something I use. Appreciate it!!!
Author

Tested with 5d8030b8f3 works well now!
Thanks Brecht, much appreciated!!

Tested with **5d8030b8f3cf** works well now! Thanks Brecht, much appreciated!!

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#63641
No description provided.