Fix T63641: transform snap invert keymap item has an effect when disabled.